<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PixHell</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="_bullet">Bullet</string>
    <string name="_weapons">Weapons</string>
    <string name="_missile">Missile</string>
    <string name="_store">Store</string>
    <string name="_options">Options</string>
    <string name="_about">About</string>
    <string name="_inventory">Inventory</string>
    <string name="_health_pack">Health Pack</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="story">Your are the last hope for your home planet Zeonada. You have in your possesion Divrojab found only in a few rare places in the universe. The Divrojab can be used to produce ample energy for several milleniums to come. It is imperative that you deliver Divrojab safely to Zeonada. 
\n\n The story of your encounter with the Divrojab has reached far across your planetary system. There are a lot of creatures who are looking to rob you. It is imperative that you deliver Divrojab. It is hell, but you need to pull through for the survival of your people.</string>
    <string name="_circle_blaster">Circle Blaster</string>
    <string name="_tri_blaster">Tri-Blaster</string>

</resources>