<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/weapons"
        android:title="@string/_weapons"
        android:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/bullet"
                android:title="@string/_bullet"/>
            <item
                android:id="@+id/missile"
                android:title="@string/_missile"/>
            <item android:id="@+id/tri_blaster" android:title="@string/_tri_blaster"/>
        </menu>
    </item>
    
    <item
        android:id="@+id/inventory"
        android:title="@string/_inventory"
        android:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/health_pack"
                android:title="@string/_health_pack"/>
        </menu>
    </item>
    
    <item
        android:id="@+id/store"
        android:title="@string/_store"
        android:showAsAction="ifRoom" >

    </item>
    
     <item
        android:id="@+id/options"
        android:title="@string/_options"
        android:showAsAction="ifRoom" >

    </item>

</menu>